examples/negative/actor_row/missing_actor_reply.kai
# Negative fixture (#511 / actor row contract — issue #472):
# `only_request` declares `Actor[Request]` only but sends a
# `Reply` message. After the #472 fix, parametric effect labels
# are distinct, so the missing `Actor[Reply]` is properly
# reported instead of being silently unified with `Actor[Request]`.

import actor

type Request = Query(String)
type Reply   = Answer(String)

fn only_request(req: Pid[Request], rep: Pid[Reply]) : Unit / Actor[Request] = {
  Actor.send(req, Query("hi"))
  Actor.send(rep, Answer("ok"))
}

fn main() : Int / Console = 0
